@@ -3,47 +3,47 @@ mdb> echo on
 Command echo enabled.
 mdb> register --quiet
 mdb> 
-!                    fail_trace_counts    query
-?                    finish               quit
-P                    flag                 r
-alias                format               register
-all_class_decls      format_param         retry
-all_procedures       forward              return
-all_regs             g                    s
-all_type_ctors       gen_stack            save
-ambiguity            goal_paths           scope
-b                    goto                 scroll
-break                grep                 shell
-break_print          h                    source
-browse               held_vars            stack
-c                    help                 stack_default_limit
-cc_query             histogram_all        stack_regs
-class_decl           histogram_exp        stats
-clear_histogram      hold                 step
-condition            ignore               subgoal
-consumer             io_query             table
-context              level                table_io
-continue             list                 term_size
-current              list_context_lines   track
-cut_stack            list_path            trail_details
-d                    max_io_actions       trust
-dd                   maxdepth             trusted
-debug_vars           mindepth             type_ctor
-delete               mm_stacks            unalias
-dice                 mmc_options          unhide_events
-diff                 modules              untrust
-disable              next                 up
-document             nondet_stack         user
-document_category    open                 user_event_context
-down                 p                    v
-dump                 pass_trace_counts    var_details
-e                    pneg_stack           vars
-echo                 pop_list_dir         view
-enable               print                web_browser_cmd
-exception            print_optionals      xml_browser_cmd
-excp                 printlevel           xml_tmp_filename
-f                    procedures           
-fail                 push_list_dir        
+!                    fail_trace_counts    push_list_dir
+?                    finish               query
+P                    flag                 quit
+alias                format               r
+all_class_decls      format_param         register
+all_procedures       forward              retry
+all_regs             g                    return
+all_type_ctors       gen_stack            s
+ambiguity            goal_paths           save
+b                    goto                 scope
+break                grep                 scroll
+break_print          h                    shell
+browse               held_vars            source
+c                    help                 stack
+cc_query             histogram_all        stack_default_limit
+class_decl           histogram_exp        stack_regs
+clear_histogram      hold                 stats
+condition            ignore               step
+consumer             io_query             subgoal
+context              level                table
+continue             list                 table_io
+current              list_cmd             term_size
+cut_stack            list_context_lines   track
+d                    list_path            trail_details
+dd                   max_io_actions       trust
+debug_vars           maxdepth             trusted
+delete               mindepth             type_ctor
+dice                 mm_stacks            unalias
+diff                 mmc_options          unhide_events
+disable              modules              untrust
+document             next                 up
+document_category    nondet_stack         user
+down                 open                 user_event_context
+dump                 p                    v
+e                    pass_trace_counts    var_details
+echo                 pneg_stack           vars
+enable               pop_list_dir         view
+exception            print                web_browser_cmd
+excp                 print_optionals      xml_browser_cmd
+f                    printlevel           xml_tmp_filename
+fail                 procedures           
 h              help           histogram_exp  
 held_vars      histogram_all  hold           
 var_details  vars         view         
