@@ -131,6 +131,14 @@ Changes to the Mercury compiler
   keep opt1 enabled even if opt1 is not normally enabled at optimization
   level N.
 
+Changes to the Mercury implementation
+-------------------------------------
+
+* The `list` command in mdb (the Mercury debugger) may now call an external
+  command to print source listings; the command is set using `list_cmd`.
+  For example, the command could produce syntax highlighted source listings.
+
+
 NEWS for Mercury 20.06.1
 ========================
 
